--- a/contacto.html
+++ b/contacto.html
@@ -79,13 +79,14 @@
                    
  <script src="js/menu.js"></script>
  <div class="form">
-    <form action="./estilos/estilos/enviar.php" method="POST">
-        <input type="text" name="NOMBRE" placeholder="Tu nombre" required>
-        <input type="email" name="CORREO" placeholder="Tu correo" required>
-        <input type="tel" name="TELEFONO" placeholder="Tu teléfono" required>
-        <textarea name="MENSAJE" placeholder="Tu mensaje" required></textarea>
-        <button type="submit">Enviar</button>
-    </form>
+     <form action="registrar.php" method="post">
+     <h2>CONTACTO</h2>
+     <input type="text" name="NOMBRE" placeholder="NOMBRE">
+     <input type="email" name="CORREO" placeholder="CORREO">
+     <input type="text" name="TELEFONO" placeholder="TELEFONO">
+     <textarea name="MENSAJE" placeholder="ESCRIBA AQUI SU MENSAJE"></textarea>    
+     <input type="button" value="ENVIAR" id="boton">
+   </form>  
        
         </div>  
 
