--- a/empresasyconsorcios.html
+++ b/empresasyconsorcios.html
@@ -20,11 +20,11 @@
                
         <nav class="menu">
                     <a href="index.html">INICIO</a>
-                    <a href="">NOSOTROS</a>
-                    <a href="">PRODUCTOS</a>
-                    <a href="">SERVICIOS</a>
-                    <a href="">PROMOCIONES</a>
-                    <a href="">EMPRESAS Y CONSORCIOS</a>
+                    <a href="nosotros.html">NOSOTROS</a>
+                    <a href="productos.html">PRODUCTOS</a>
+                    <a href="servicios.html">SERVICIOS</a>
+                    <a href="promos.html">PROMOCIONES</a>
+                    <a href="empresasyconsorcios.html">EMPRESAS Y CONSORCIOS</a>
                     <a href="contacto.html">CONTACTO</a>
                 </nav>
             </div> 
