--- a/limpiezadelhogar.html
+++ b/limpiezadelhogar.html
@@ -22,11 +22,11 @@
         <nav class="menu">
                     <a href="index.html">INICIO</a>
                     <a href="nosotros.html">NOSOTROS</a>
-                    <a href="p">PRODUCTOS</a>
+                    <a href="productos.html">PRODUCTOS</a>
                     <a href="servicios.html">SERVICIOS</a>
-                    <a href="proos.html">PROMOCIONES</a>
-                    <a href="">EMPRESAS Y CONSORCIOS</a>
-                    <a href="contcto.html">CONTACTO</a>
+                    <a href="promos.html">PROMOCIONES</a>
+                    <a href="empresasyconsorcios.html">EMPRESAS Y CONSORCIOS</a>
+                    <a href="contacto.html">CONTACTO</a>
                 </nav>
             </div> 
 </header>
