--- a/nosotros.html
+++ b/nosotros.html
@@ -23,9 +23,9 @@ mart<!DOCTYPE html>
                     <a href="nosotros.html">NOSOTROS</a>
                     <a href="productos.html">PRODUCTOS</a>
                     <a href="servicios.html">SERVICIOS</a>
-                    <a href="proos.html">PROMOCIONES</a>
-                    <a href="">EMPRESAS Y CONSORCIOS</a>
-                    <a href="contcto.html">CONTACTO</a>
+                    <a href="promos.html">PROMOCIONES</a>
+                    <a href="empresasyconsorcios.html">EMPRESAS Y CONSORCIOS</a>
+                    <a href="contacto.html">CONTACTO</a>
                 </nav>
             </div> 
 </header>
