--- a/aromatizantes.html
+++ b/aromatizantes.html
@@ -25,8 +25,8 @@
                     <a href="productos.html">PRODUCTOS</a>
                     <a href="servicios.html">SERVICIOS</a>
                     <a href="proos.html">PROMOCIONES</a>
-                    <a href="">EMPRESAS Y CONSORCIOS</a>
-                    <a href="contcto.html">CONTACTO</a>
+                    <a href="empresasyconsorcios.html">EMPRESAS Y CONSORCIOS</a>
+                    <a href="contacto.html">CONTACTO</a>
                 </nav>
             </div> 
 </header>
