--- a/contacto.html
+++ b/contacto.html
@@ -79,7 +79,7 @@
                    
  <script src="js/menu.js"></script>
  <div class="form">
-     <form action="registrar.php" method="post">
+     <form action="./estilos/estilos/enviar.php" method="post">
      <h2>CONTACTO</h2>
      <input type="text" name="NOMBRE" placeholder="NOMBRE">
      <input type="email" name="CORREO" placeholder="CORREO">
