--- a/contacto.html
+++ b/contacto.html
@@ -85,7 +85,7 @@
      <input type="email" name="CORREO" placeholder="CORREO">
      <input type="text" name="TELEFONO" placeholder="TELEFONO">
      <textarea name="MENSAJE" placeholder="ESCRIBA AQUI SU MENSAJE"></textarea>    
-     <input type="button" value="ENVIAR" id="boton">
+     <input type="submit" value="ENVIAR" id="boton">
    </form>  
        
         </div>  
