--- a/contacto.html
+++ b/contacto.html
@@ -23,7 +23,7 @@
                     <a href="productos.html">PRODUCTOS</a>
                     <a href="servicios.html">SERVICIOS</a>
                     <a href="promos.html">PROMOCIONES</a>
-                    <a href="empresasyconsorcios.html">EMPRESAS Y CONSORCIOS</a>
+                    <a href="">EMPRESAS Y CONSORCIOS</a>
                     <a href="contacto.html">CONTACTO</a>
                 </nav>
             </div> 
@@ -79,13 +79,13 @@
                    
  <script src="js/menu.js"></script>
  <div class="form">
-     <form action="./estilos/estilos/enviar.php" method="post">
+     <form action="registrar.php" method="post">
      <h2>CONTACTO</h2>
      <input type="text" name="NOMBRE" placeholder="NOMBRE">
      <input type="email" name="CORREO" placeholder="CORREO">
      <input type="text" name="TELEFONO" placeholder="TELEFONO">
      <textarea name="MENSAJE" placeholder="ESCRIBA AQUI SU MENSAJE"></textarea>    
-     <input type="submit" value="ENVIAR" id="boton">
+     <input type="button" value="ENVIAR" id="boton">
    </form>  
        
         </div>  
