--- a/productosparamascotas.html
+++ b/productosparamascotas.html
@@ -23,7 +23,7 @@ in<!DOCTYPE html>
                     <a href="nosotros.html">NOSOTROS</a>
                     <a href="productos.html">PRODUCTOS</a>
                     <a href="servicios.html">SERVICIOS</a>
-                    <a href="proos.html">PROMOCIONES</a>
+                    <a href="promos.html">PROMOCIONES</a>
                     <a href="empresasyconsorcios.html">EMPRESAS Y CONSORCIOS</a>
                     <a href="contacto.html">CONTACTO</a>
                 </nav>
@@ -63,10 +63,10 @@ in<!DOCTYPE html>
   <footer class="footer">
     <div class="social">
       <a href="https://www.facebook.com/sanjuan.esencias" class="icon-fecbook"></a>
-      <a href="tel:1167882020" class="icon-whatsapp"></a>   
+      <a href="tel:+5401167882020" class="icon-whatsapp"></a>   
      <a href="https://www.instagram.com/sanjuanesencias/?hl=es-la" class="icon-instagram"></a>       
      <a href="https://www.google.com/maps/place/San+Juan+1270/@-34.6275385,-58.4778579,9817m/data=!3m1!1e3!4m8!1m2!2m1!1ssan+juan+esencias!3m4!1s0x95bccbdb78f88a11:0xf2c3936375308440!8m2!3d-34.62243!4d-58.384" class="icon-googlemaps"></a>
-      <a href="" class="icon-mailing"></a>
+      <a href="mailto:info@sanjuanesencias.com.ar" class="icon-mailing"></a>
 
 
       </div>
