--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <i class="icon-whatsapp"></i>
                 <h2>Whatsapp 011 6788-2020</h2>
             </div>
-            <button><a href="tel:+5401167882020">Enviar mensaje</a></button>
+            <button><a href="https://wa.me/5401167882020?text=Hola!%20Quiero%20hacer%20una%20consulta">Enviar mensaje</a></button>
         </div>
            <section id="info">
               
