--- a/nosotros.html
+++ b/nosotros.html
@@ -9,7 +9,14 @@ mart<!DOCTYPE html>
     <link href="https://file.myfontastic.com/Urcx2PLXxmZXmA63BdzFYf/icons.css" rel="stylesheet">
     <link rel="stylesheet" type="video" href="videoback/back.mp4">
 </head>
-     
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P3XMW6RWV6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P3XMW6RWV6');
+</script>    
 <body> 
 <img id="logo" src="img/logo.jpg">      
 <header>
