--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <link href="https://file.myfontastic.com/Urcx2PLXxmZXmA63BdzFYf/icons.css" rel="stylesheet">
     <link rel="stylesheet" type="video" href="videoback/back.mp4">
 </head>
-     
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P3XMW6RWV6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P3XMW6RWV6');
+</script>    
 <body> 
 <img id="logo" src="img/logo.jpg">            
 <header>
@@ -94,7 +101,7 @@
   <footer class="footer">
     <div class="social">
       <a href="https://www.facebook.com/sanjuan.esencias" class="icon-fecbook"></a>
-      <a href="tel:+5401167882020" class="icon-whatsapp"></a>   
+      <a href="https://wa.me/5401167882020?text=Hola!%20Quiero%20hacer%20una%20consulta" class="icon-whatsapp"></a>   
      <a href="https://www.instagram.com/sanjuanesencias/?hl=es-la" class="icon-instagram"></a>       
      <a href="https://www.google.com/maps/place/San+Juan+1270/@-34.6275385,-58.4778579,9817m/data=!3m1!1e3!4m8!1m2!2m1!1ssan+juan+esencias!3m4!1s0x95bccbdb78f88a11:0xf2c3936375308440!8m2!3d-34.62243!4d-58.384" class="icon-googlemaps"></a>
       <a href="mailto:info@sanjuanesencias.com.ar" class="icon-mailing"></a>
