--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     <main>
         <div class="contnum">
             <div class="contnum_cont">
-                <i class="icon-whatsapp"></i>
-                <h2>Whatsapp 011 6788-2020</h2>
+                <h2>Whatsapp - 011 6788-2020</h2>
             </div>
             <button><a href="https://wa.me/5401167882020?text=Hola!%20Quiero%20hacer%20una%20consulta">Enviar mensaje</a></button>
+            <h2>Telefono Fijo - 011 4120-4792</h2>
         </div>
            <section id="info">
               
