--- a/promos.html
+++ b/promos.html
@@ -70,7 +70,7 @@
       <a href="https://www.facebook.com/sanjuan.esencias" class="icon-fecbook"></a>
       <a href="https://wa.me/5401150959031?text=Hola!%20Quiero%20hacer%20una%20consulta" class="icon-whatsapp"></a>   
      <a href="https://www.instagram.com/sanjuanesencias/?hl=es-la" class="icon-instagram"></a>       
-     <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3935.596710846594!2d-58.95183162361174!3d-34.927892272839905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcfaef4b0e9ec3%3A0x5dd676d60088475f!2sMoreno%201040%2C%20B1741BSN%20Gral.%20Las%20Heras%2C%20Provincia%20de%20Buenos%20Aires!5e1!3m2!1ses!2sar!4v1753811485195!5m2!1ses!2sar" class="icon-googlemaps"></a>
+     <a href="https://maps.app.goo.gl/HcRUbPZKbSdWcgsz7" class="icon-googlemaps"></a>
       <a href="mailto:info@sanjuanesencias.com.ar" class="icon-mailing"></a>
 
 
